--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.work:work-runtime:2.8.0"
     implementation 'org.jsoup:jsoup:1.11.1'
     implementation 'org.java-websocket:Java-WebSocket:1.5.2'
     implementation 'androidx.appcompat:appcompat:1.4.1'
