--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="locked"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
