Introduce SettingsActivity to choose Speaker mode
Was surprisingly hard to shuffle the result back to MessageHandler.
I bet I'm doing it wrong.

The original widget is still there too. Will remove it from main screen in a separate commit.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="locked"
+            android:exported="true" >
+        </activity>
     </application>
 
 </manifest>
