--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +21,7 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.virtualvaltteri.MainActivity"
             android:screenOrientation="landscape"
             android:exported="true" >
             <intent-filter>
@@ -29,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.virtualvaltteri.SettingsActivity"
             android:screenOrientation="locked"
             android:exported="true" >
         </activity>
