--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.virtualvaltteri"
         minSdk 29
         targetSdk 33
-        versionCode 3
-        versionName "0.3"
+        versionCode 5
+        versionName "0.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.opencsv:opencsv:5.5.2'
     implementation 'com.github.KalebKE:FSensor:v2.2'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
