--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,7 +33,7 @@
         </activity>
         <activity
             android:name="com.virtualvaltteri.SettingsActivity"
-            android:screenOrientation="locked"
+            android:screenOrientation="user"
             android:exported="true" >
         </activity>
     </application>
