99 ways how not to use various change listeners in Android
Like seriously... the EditTextPreference bind stuff just doesn't do anything?
There seems to be some kind of policy against simply listening to an end state and
acting on that. All listeners either trigger before changes were applied, or
are unreliable and possible never trigger...

SettingsFragment.java needs serious cleanup but want to checkpoint the
working state before I start deleting.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.virtualvaltteri.SettingsActivity"
+            android:name="com.virtualvaltteri.settings.SettingsActivity"
             android:screenOrientation="user"
             android:exported="true" >
         </activity>
