--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -21,11 +20,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VirtualValtteri"
         tools:targetApi="31" >
+        <service
+            android:name=".VirtualValtteriService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
 
         <activity
-            android:name="com.virtualvaltteri.MainActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" >
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,9 +37,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.virtualvaltteri.settings.SettingsActivity"
-            android:screenOrientation="user"
-            android:exported="true" >
+            android:name=".settings.SettingsActivity"
+            android:exported="true"
+            android:screenOrientation="user" >
         </activity>
     </application>
 
