Add option to close the app and service
Once again thanks android for providing 5 different ways to finish()
and exit an app... what a waste of time this was.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:finishOnTaskLaunch="true"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,6 +40,7 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:exported="true"
+            android:finishOnTaskLaunch="true"
             android:screenOrientation="user" >
         </activity>
     </application>
